bigger preview; fixed content overflow

--- a/media/styles/screen.css
+++ b/media/styles/screen.css
@@ -19,11 +19,12 @@ html,body{font-size:12px;font-family:"Microsoft Yahei",Helvetica,Arial,Tahoma,sa
   h4{color:#fff;font-weight:normal;font-size:14px;text-shadow:0 1px 0 black;}
   input {font-family:"Microsoft Yahei",Helvetica,Arial,Tahoma,sans-serif;font-size:12px;overflow:hidden;border:3px solid #222;-webkit-transition-property:border;-webkit-transition-duration:300ms;}
   input{font-family:"Microsoft Yahei",Helvetica,Arial,Tahoma,sans-serif;font-size:12px;overflow:hidden;}
-    #text_input{color:#fff;background:rgba(0,204,255,1);text-shadow:0 0 3px rgba(0,0,0,.5);text-align:center;margin:10px 0 0 0;padding:6px;font-size:48px;line-height:48px;height:50px;width:50px;}
+    #text_input{color:#fff;background:rgba(0,204,255,1);text-shadow:0 0 3px rgba(0,0,0,.5);text-align:center;margin:10px 0 0 0;padding:6px;font-size:54px;line-height:54px;height:64px;width:64px;}
   input:hover, input:focus{border:3px solid #fff;}
   #opt_templates{width:100px;}
   #opt_text_input{margin-bottom:15px;}
   #opt_bgcolor{margin-top:15px;height:36px;}
+  #opt_color{float:left;margin-right:20px;}
   #opt_font,#opt_color,#opt_sdcolor,#opt_adv{height:36px;}
   #preset{margin-top:13px;font-family:"Microsoft Yahei",Helvetica,Arial,Tahoma,sans-serif;font-size:12px;}
   #bgcolors_panel{margin-left:20px;}
@@ -48,7 +49,7 @@ html,body{font-size:12px;font-family:"Microsoft Yahei",Helvetica,Arial,Tahoma,sa
     #cx50{background:#808080;}
     #cx10{background:#1a1a1a;}
   #font_select{margin-left:59px;font-family:"Microsoft Yahei",Helvetica,Arial,Tahoma,sans-serif;font-size:12px;}
-  .color_picker{margin-left:23px;}
+  .color_picker{margin-left:20px;}
   #opt_adv_ul{margin:6px 0 0 23px;}
   #opt_adv_ul li{display:inline;margin-left:3px;}
   #btn_gen {cursor:pointer;width:178px;height:62px;background:transparent url('../images/nbg.png') no-repeat 0px -246px ;}
